--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width,initial-scale=1">
 	<title>POOMI INNER WEARS</title>
 	<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
-	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="style.css">
 	<!-- tiny style for placeholder images and logo -->
 	<style>
 		.img-missing { display:block; width:100%; height:auto; background:#f3f4f6; color:#6b7280; object-fit:contain; }
