--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	<header class="site-header">
 		<div class="container header-inner">
 			<div class="brand">
-				<img src="images/logo.JPEG" alt="POOMI INNER WEARS" class="brand-logo" onerror="this.style.display='none'; this.nextElementSibling.style.display='inline'">
+				<img src="logo.JPEG" alt="POOMI INNER WEARS" class="brand-logo" onerror="this.style.display='none'; this.nextElementSibling.style.display='inline'">
 				<span class="brand-text">POOMI INNER WEARS</span>
 			</div>
 			<nav class="main-nav" aria-label="Primary">
@@ -51,7 +51,7 @@
 				</div>
 				<div class="about-image">
 					<!-- show the photo at its natural height/width (scaled to container) -->
-					<img src="images/about.JPEG" alt="POOMI innerwear fabric and sewing" loading="eager">
+					<img src="about.JPEG" alt="POOMI innerwear fabric and sewing" loading="eager">
 				</div>
 			</div>
 
@@ -62,11 +62,11 @@
 					<div class="slider-track">
 						<div class="slide"><img src="images/about.JPEG" alt="POOMI innerwear fabric and sewing" loading="eager"></div>
 						<div class="slide"><img src="images/cotton1.JPEG" alt="Breathable cotton 1" loading="lazy"></div>
-						<div class="slide"><img src="images/cotton2.JPEG" alt="Breathable cotton 2" loading="lazy"></div>
-						<div class="slide"><img src="images/cotton3.JPEG" alt="Breathable cotton 3" loading="lazy"></div>
-						<div class="slide"><img src="images/cotton4.JPEG" alt="Breathable cotton 4" loading="lazy"></div>
-						<div class="slide"><img src="images/cotton5.JPEG" alt="Breathable cotton 5" loading="lazy"></div>
-						<div class="slide"><img src="images/cotton6.JPEG" alt="Breathable cotton 6" loading="lazy"></div>
+						<div class="slide"><img src="cotton2.JPEG" alt="Breathable cotton 2" loading="lazy"></div>
+						<div class="slide"><img src="cotton3.JPEG" alt="Breathable cotton 3" loading="lazy"></div>
+						<div class="slide"><img src="cotton4.JPEG" alt="Breathable cotton 4" loading="lazy"></div>
+						<div class="slide"><img src="cotton5.JPEG" alt="Breathable cotton 5" loading="lazy"></div>
+						<div class="slide"><img src="cotton6.JPEG" alt="Breathable cotton 6" loading="lazy"></div>
 					</div>
 					<button class="slider-btn next" aria-label="Next slide">&rarr;</button>
 				</div>
