--- a/index.html
+++ b/index.html
@@ -80,11 +80,11 @@
 				<div class="testi-grid">
 					<blockquote>
 						<p>Perfect fit and very soft — it keeps its shape after many washes.</p>
-						<cite>— Eshwaran</cite>
+						<cite>— Radhesh</cite>
 					</blockquote>
 					<blockquote>
 						<p>Breathable fabric, comfortable all day even in Chennai heat.</p>
-						<cite>— Radhesh</cite>
+						<cite>— vasanth</cite>
 					</blockquote>
 					<blockquote>
 						<p>Excellent stitching and durable. Totally worth it.</p>
