--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
 				<div class="slider" aria-label="About photos slider">
 					<button class="slider-btn prev" aria-label="Previous slide">&larr;</button>
 					<div class="slider-track">
-						<div class="slide"><img src="images/about.JPEG" alt="POOMI innerwear fabric and sewing" loading="eager"></div>
-						<div class="slide"><img src="images/cotton1.JPEG" alt="Breathable cotton 1" loading="lazy"></div>
+						<div class="slide"><img src="cotton0.JPEG" alt="POOMI innerwear fabric and sewing" loading="eager"></div>
+						<div class="slide"><img src="cotton1.JPEG" alt="Breathable cotton 1" loading="lazy"></div>
 						<div class="slide"><img src="cotton2.JPEG" alt="Breathable cotton 2" loading="lazy"></div>
 						<div class="slide"><img src="cotton3.JPEG" alt="Breathable cotton 3" loading="lazy"></div>
 						<div class="slide"><img src="cotton4.JPEG" alt="Breathable cotton 4" loading="lazy"></div>
