Update navigation links in index.html

--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
 			</div>
 			<nav class="main-nav" aria-label="Primary">
 				<a href="index.html">Home</a>
-				<a href="https://ig.me/m/poomi_inners" target="_blank" rel="noopener">Collections</a>
+				<a href="https://www.instagram.com/poomi_inners?igsh=MWt5MWN3ZmhzbzI1dw==" target="_blank" rel="noopener">Collections</a>
 				<a href="#about">About</a>
 				<!-- gallery was removed earlier; point Contact to a dedicated page -->
-				<a href="contact.html">Contact</a>
+				<a href="https://wa.me/9566825923"target="_blank" rel="noopener">Contact</a>
 			</nav>
 			<a class="btn order" href="https://ig.me/m/poomi_inners" target="_blank" rel="noopener">Order now</a>
 		</div>
